some rules and data field

--- a/angular/first-angular/src/app/content/content.component.html
+++ b/angular/first-angular/src/app/content/content.component.html
@@ -4,8 +4,8 @@
       <app-first-page></app-first-page>
     </div>
 
-    <div *ngSwitchCase="Pages.SECOND_PAGE">
-      <app-second-page></app-second-page>
+    <div *ngSwitchCase="Pages.GAME_PAGE">
+      <app-game-page></app-game-page>
     </div>
 
     <div *ngSwitchCase="Pages.THIRD_PAGE">
