--- a/angular/first-angular/src/app/content/developers-page/developers-page.component.scss
+++ b/angular/first-angular/src/app/content/developers-page/developers-page.component.scss
@@ -5,10 +5,11 @@
     25px 0 20px -20px rgba(0, 0, 0, 0.45);
 }
 .container {
+  height: 40rem;
   display: flex;
   justify-content: space-evenly;
-  width: 70%;
+  align-items: center;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
-  background-color: white;
 }
