--- a/angular/first-angular/src/app/toolbar/toolbar.component.html
+++ b/angular/first-angular/src/app/toolbar/toolbar.component.html
@@ -8,7 +8,7 @@
       Main Page
     </button>
     <button
-      (click)="pageContentService.handleChangeContent(Pages.SECOND_PAGE)"
+      (click)="pageContentService.handleChangeContent(Pages.GAME_PAGE)"
       class="menuBtn"
     >
       Second
