data-field-component is added

--- a/angular/first-angular/src/app/content/developers-page/developers-page.component.html
+++ b/angular/first-angular/src/app/content/developers-page/developers-page.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <mat-card class="developerCard">
     <img mat-card-image src="../../../assets/Photoes/Andrew.jpg" alt="Andrew" />
-    <mat-card-content>
+    <div class="name">Kozubenko Andrew</div>
+    <mat-card-content class="description">
       The author of this game, backend developer.
     </mat-card-content>
   </mat-card>
@@ -11,14 +12,23 @@
       src="../../../assets/Photoes/Dmitriy.jpg"
       alt="Dmitriy"
     />
-    <mat-card-content> Backend developer. </mat-card-content>
+    <div class="name">Polyachkov Dmitriy</div>
+    <mat-card-content class="description">
+      Backend developer.
+    </mat-card-content>
   </mat-card>
   <mat-card class="developerCard">
     <img mat-card-image src="../../../assets/Photoes/Nikita.jpg" alt="Nikita" />
-    <mat-card-content> Frontend developer. </mat-card-content>
+    <div class="name">Volkov Nikita</div>
+    <mat-card-content class="description">
+      Frontend developer.
+    </mat-card-content>
   </mat-card>
   <mat-card class="developerCard">
     <img mat-card-image src="../../../assets/Photoes/sveta.jpg" alt="Sveta" />
-    <mat-card-content> Frontend developer. </mat-card-content>
+    <div class="name">Yakutina Svetlana</div>
+    <mat-card-content class="description">
+      Frontend developer.
+    </mat-card-content>
   </mat-card>
 </div>
