--- a/angular/first-angular/src/app/toolbar/toolbar.component.html
+++ b/angular/first-angular/src/app/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
       (click)="pageContentService.handleChangeContent(Pages.GAME_PAGE)"
       class="menuBtn"
     >
-      Second
+      Game
     </button>
     <button
       (click)="pageContentService.handleChangeContent(Pages.THIRD_PAGE)"
