--- a/angular/first-angular/src/app/content/developers-page/developers-page.component.scss
+++ b/angular/first-angular/src/app/content/developers-page/developers-page.component.scss
@@ -1,5 +1,5 @@
 .developerCard {
-  width: 225px;
+  width: 250px;
   height: 330px;
   box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45),
     25px 0 20px -20px rgba(0, 0, 0, 0.45);
@@ -12,4 +12,45 @@
   width: 100%;
   margin-right: auto;
   margin-left: auto;
+}
+
+.developerCard {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  border-radius: 10%;
+  &:hover {
+    width: 20rem;
+    height: 30rem;
+    background-color: rgb(235, 230, 230);
+    .name {
+      margin-top: 0.5rem;
+      margin-bottom: 0.3rem;
+      font-weight: bold;
+      font-size: 1.6rem;
+      font-family: sans-serif;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .description {
+      font-size: 1.3rem;
+      font-family: sans-serif;
+    }
+  }
+}
+
+.name {
+  color: black;
+  margin-top: 0.5rem;
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+  font-size: 1.4rem;
+  font-family: sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.description {
+  color: black;
+  font-size: 1rem;
+  font-family: sans-serif;
 }
