--- a/angular/first-angular/src/app/content/game-page/game-page.component.html
+++ b/angular/first-angular/src/app/content/game-page/game-page.component.html
@@ -1,28 +1,3 @@
-<div class="container">
-  <div class="interface">
-    <div class="fraction-name">
-      <img
-        src="../../../assets/Photoes/Andrew.jpg"
-        alt="babos"
-        height="40"
-        width="40"
-      />
-      Болото
-    </div>
-    <div class="resources">
-      <img
-        class="heart"
-        src="../../../assets/Photoes/hearth.png"
-        alt="hearths"
-      />
-      <div class="count-of-smth">3</div>
-      <div class="coin">
-        <div class="coin__front"></div>
-        <div class="coin__edge"></div>
-        <div class="coin__back"></div>
-        <div class="coin__shadow"></div>
-      </div>
-      <div class="count-of-smth">10</div>
-    </div>
-  </div>
+<div class="background">
+  <app-data-field></app-data-field>
 </div>
