--- a/angular/first-angular/src/app/content/game-page/data-field/data-field.component.html
+++ b/angular/first-angular/src/app/content/game-page/data-field/data-field.component.html
@@ -1,14 +1,6 @@
 <div class="container">
   <div class="interface">
-    <div class="fraction-name">
-      <img
-        src="../../../assets/Photoes/Andrew.jpg"
-        alt="babos"
-        height="40"
-        width="40"
-      />
-      Болото
-    </div>
+    <div class="fraction-name">Болото</div>
     <div class="resources">
       <img
         class="heart"
