--- a/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
+++ b/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
@@ -16,7 +16,7 @@
 }
 
 .fraction-name {
-  font-family: serif, Monotype Corsiva;
+  font-family: Josefin Sans;
   font-size: 3rem;
 }
 
@@ -28,7 +28,6 @@
 
 .heart {
   width: 3.2rem;
-
   height: 3.2rem;
 }
 
