--- a/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
+++ b/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
@@ -1,17 +1,25 @@
 .container {
+  display: flex;
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
   background-color: white;
 }
 
 .interface {
+  width: 100%;
   height: 5rem;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-left: 10rem;
-  padding-right: 20rem;
+  padding-right: 5rem;
+  background: linear-gradient(rgb(205, 233, 158), rgb(240, 149, 165));
+}
+
+.giveUpField {
+  display: flex;
+  align-items: center;
+  padding-right: 3rem;
   background: linear-gradient(rgb(205, 233, 158), rgb(240, 149, 165));
 }
 
@@ -140,4 +148,87 @@ $turn-time: 6s;
 .count-of-smth {
   font-family: serif, Monotype Corsiva;
   font-size: 3rem;
+}
+
+.fa {
+  font-size: 19px;
+  width: 20px;
+}
+
+.btn-slide {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  height: 50px;
+  width: 260px;
+  line-height: 50px;
+  padding: 0px;
+  border-radius: 25px;
+  box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
+  background: linear-gradient(135deg, #e570e7 0%, #79f1fc 100%);
+}
+
+.btn-slide:active {
+  box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.7);
+  -webkit-transform: scale(0.98);
+  transform: scale(0.96);
+}
+
+.btn-slide:hover {
+  background: linear-gradient(-135deg, #e570e7 0%, #79f1fc 100%);
+}
+
+.btn-slide span.circle {
+  display: block;
+  background-color: #fff;
+  color: #e570e7;
+  position: absolute;
+  margin: 5px;
+  height: 40px;
+  width: 40px;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  transition: all 1.5s ease;
+}
+
+.btn-slide:hover span.circle {
+  left: 100%;
+  margin-left: -45px;
+  background-color: #fff;
+  color: #79f1fc;
+}
+
+.btn-slide span.title {
+  font-family: "Nunito Sans";
+  position: absolute;
+  left: 85px;
+  font-size: 20px;
+  letter-spacing: 1px;
+  color: #fff;
+  transition: all 1.5s linear;
+}
+
+.btn-slide span.title-hover {
+  opacity: 0;
+}
+.btn-slide:hover span.title {
+  opacity: 0;
+}
+.btn-slide:hover span.title-hover {
+  opacity: 1;
+  left: 20px;
+}
+
+@media (max-width: 540px) {
+  h1 {
+    font-size: 36px;
+  }
+  p {
+    font-size: 20px;
+  }
+
+  .btn-slide {
+    width: 240px;
+  }
 }
