--- a/angular/first-angular/src/app/content/game-page/game-over/game-over.component.html
+++ b/angular/first-angular/src/app/content/game-page/game-over/game-over.component.html
@@ -2,6 +2,7 @@
   <div class="cl-btn-6">
     <div class="cl-btn-6-in">
       <div
+        (click)="gameControlService.handleGameEnded()"
         (click)="gameControlService.handleChangeContent(GamePhases.PREPARING)"
         class="cl-btn-6-txt"
       >
