--- a/angular/first-angular/src/app/content/game-page/preparing/preparing.component.html
+++ b/angular/first-angular/src/app/content/game-page/preparing/preparing.component.html
@@ -1,5 +1,6 @@
 <div class="buttons">
   <button
+    (click)="gameControlService.handleGameStarted()"
     (click)="gameControlService.handleChangeContent(GamePhases.START_GAME)"
     class="blob-btn"
   >
