map-field and turn constant

--- a/angular/first-angular/src/app/content/game-page/data-field/data-field.component.html
+++ b/angular/first-angular/src/app/content/game-page/data-field/data-field.component.html
@@ -31,3 +31,60 @@
     </a>
   </div>
 </div>
+
+<div class="endTurnButtonField">
+  <button (click)="gameControlService.handleTurn()" class="endTurnButton">
+    End the Turn
+  </button>
+</div>
+
+<div class="wrapper">
+  <div class="cardField cf1 row1 opponentsRow"></div>
+  <div class="cardField cf2 row1 opponentsRow"></div>
+  <div class="cardField cf3 row1 opponentsRow"></div>
+  <div class="cardField cf4 row1 opponentsRow"></div>
+  <div class="cardField cf5 row1 opponentsRow"></div>
+  <div class="cardField cf6 row1 opponentsRow"></div>
+  <div class="cardField cf7 row1 opponentsRow"></div>
+  <div class="cardField cf8 row1 opponentsRow"></div>
+  <div class="cardField cf1 row2 opponentsRow"></div>
+  <div class="cardField cf2 row2 opponentsRow"></div>
+  <div class="cardField cf3 row2 opponentsRow"></div>
+  <div class="cardField cf4 row2 opponentsRow"></div>
+  <div class="cardField cf5 row2 opponentsRow"></div>
+  <div class="cardField cf6 row2 opponentsRow"></div>
+  <div class="cardField cf7 row2 opponentsRow"></div>
+  <div class="cardField cf8 row2 opponentsRow"></div>
+  <div class="cardField cf1 row3 commonRow"></div>
+  <div class="cardField cf2 row3 commonRow"></div>
+  <div class="cardField cf3 row3 commonRow"></div>
+  <div class="cardField cf4 row3 commonRow"></div>
+  <div class="cardField cf5 row3 commonRow"></div>
+  <div class="cardField cf6 row3 commonRow"></div>
+  <div class="cardField cf7 row3 commonRow"></div>
+  <div class="cardField cf8 row3 commonRow"></div>
+  <div class="cardField cf1 row4 commonRow"></div>
+  <div class="cardField cf2 row4 commonRow"></div>
+  <div class="cardField cf3 row4 commonRow"></div>
+  <div class="cardField cf4 row4 commonRow"></div>
+  <div class="cardField cf5 row4 commonRow"></div>
+  <div class="cardField cf6 row4 commonRow"></div>
+  <div class="cardField cf7 row4 commonRow"></div>
+  <div class="cardField cf8 row4 commonRow"></div>
+  <div class="cardField cf1 row5 myRow"></div>
+  <div class="cardField cf2 row5 myRow"></div>
+  <div class="cardField cf3 row5 myRow"></div>
+  <div class="cardField cf4 row5 myRow"></div>
+  <div class="cardField cf5 row5 myRow"></div>
+  <div class="cardField cf6 row5 myRow"></div>
+  <div class="cardField cf7 row5 myRow"></div>
+  <div class="cardField cf8 row5 myRow"></div>
+  <div class="cardField cf1 row6 myRow"></div>
+  <div class="cardField cf2 row6 myRow"></div>
+  <div class="cardField cf3 row6 myRow"></div>
+  <div class="cardField cf4 row6 myRow"></div>
+  <div class="cardField cf5 row6 myRow"></div>
+  <div class="cardField cf6 row6 myRow"></div>
+  <div class="cardField cf7 row6 myRow"></div>
+  <div class="cardField cf8 row6 myRow"></div>
+</div>
