--- a/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
+++ b/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
@@ -232,3 +232,71 @@ $turn-time: 6s;
     width: 240px;
   }
 }
+
+.wrapper {
+  display: grid;
+  height: calc(100vh - 80px - 6rem);
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  padding-left: 10rem;
+  padding-right: 10rem;
+  margin-top: 3rem;
+  padding-bottom: 3rem;
+  gap: 0.3rem;
+}
+
+.cardField {
+  border: 1px solid black;
+}
+.opponentsRow {
+  background-color: rgb(248, 166, 180);
+}
+.commonRow {
+  background-color: white;
+}
+.myRow {
+  background-color: rgb(159, 159, 247);
+}
+
+.endTurnButtonField {
+  position: absolute;
+  right: 1.8rem;
+  top: 6rem;
+}
+
+.endTurnButton {
+  font-size: 18px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  height: 3rem;
+  width: auto;
+  background: linear-gradient(to bottom right, blue, pink);
+  &:focus {
+    animation: effect 0.4s 1;
+  }
+}
+
+@keyframes effect {
+  0% {
+    transform: translateX(0px) rotate(0deg);
+  }
+
+  20% {
+    transform: translateX(-4px) rotate(-4deg);
+  }
+
+  40% {
+    transform: translateX(-2px) rotate(-2deg);
+  }
+
+  60% {
+    transform: translateX(4px) rotate(4deg);
+  }
+
+  80% {
+    transform: translateX(2px) rotate(2deg);
+  }
+
+  100% {
+    transform: translateX(0px) rotate(0deg);
+  }
+}
