--- a/angular/first-angular/src/app/content/third-page/third-page.component.scss
+++ b/angular/first-angular/src/app/content/third-page/third-page.component.scss
@@ -6,12 +6,9 @@
 }
 
 .container {
-  display: flex;
-  justify-content: space-evenly;
+  overflow-y: auto;
+  text-align: center;
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: white;
 }
 
 .rules-header {
