some bugs fixed

--- a/angular/first-angular/src/app/content/content.component.scss
+++ b/angular/first-angular/src/app/content/content.component.scss
@@ -1,12 +1,5 @@
-.container {
-  width: 70%;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: white;
-}
-
 .background {
   background-color: bisque;
   width: 100%;
-  height: calc(100% - 64px);
+  height: 100%;
 }
