--- a/angular/first-angular/src/app/content/game-page/game-over/game-over.component.html
+++ b/angular/first-angular/src/app/content/game-page/game-over/game-over.component.html
@@ -1,12 +1,14 @@
-<div class="container">
-  <div class="cl-btn-6">
-    <div class="cl-btn-6-in">
-      <div
-        (click)="gameControlService.handleGameEnded()"
-        (click)="gameControlService.handleChangeContent(GamePhases.PREPARING)"
-        class="cl-btn-6-txt"
-      >
-        Main Menu
+<div class="background">
+  <div class="container">
+    <div class="cl-btn-6">
+      <div class="cl-btn-6-in">
+        <div
+          (click)="gameControlService.handleGameEnded()"
+          (click)="gameControlService.handleChangeContent(GamePhases.PREPARING)"
+          class="cl-btn-6-txt"
+        >
+          Main Menu
+        </div>
       </div>
     </div>
   </div>
