--- a/angular/first-angular/src/app/content/game-page/preparing/preparing.component.html
+++ b/angular/first-angular/src/app/content/game-page/preparing/preparing.component.html
@@ -1,82 +1,85 @@
-<div class="buttons">
-  <button
-    (click)="gameControlService.handleGameStarted()"
-    (click)="gameControlService.handleChangeContent(GamePhases.START_GAME)"
-    class="blob-btn"
-  >
-    Play
-    <span class="blob-btn__inner">
-      <span class="blob-btn__blobs">
-        <span class="blob-btn__blob"></span>
-        <span class="blob-btn__blob"></span>
-        <span class="blob-btn__blob"></span>
-        <span class="blob-btn__blob"></span>
+<div class="background">
+  <div class="buttons">
+    <button
+      (click)="gameControlService.handleGameStarted()"
+      (click)="gameControlService.handleChangeContent(GamePhases.START_GAME)"
+      class="blob-btn"
+    >
+      Play
+      <span class="blob-btn__inner">
+        <span class="blob-btn__blobs">
+          <span class="blob-btn__blob"></span>
+          <span class="blob-btn__blob"></span>
+          <span class="blob-btn__blob"></span>
+          <span class="blob-btn__blob"></span>
+        </span>
       </span>
-    </span>
-  </button>
-  <br />
+    </button>
+    <br />
 
-  <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-    <defs>
-      <filter id="goo">
-        <feGaussianBlur
-          in="SourceGraphic"
-          result="blur"
-          stdDeviation="10"
-        ></feGaussianBlur>
-        <feColorMatrix
-          in="blur"
-          mode="matrix"
-          values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7"
-          result="goo"
-        ></feColorMatrix>
-        <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
-      </filter>
-    </defs>
-  </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+      <defs>
+        <filter id="goo">
+          <feGaussianBlur
+            in="SourceGraphic"
+            result="blur"
+            stdDeviation="10"
+          ></feGaussianBlur>
+          <feColorMatrix
+            in="blur"
+            mode="matrix"
+            values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7"
+            result="goo"
+          ></feColorMatrix>
+          <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
+        </filter>
+      </defs>
+    </svg>
 
-  <button class="blob-btn">
-    Invite friend
-    <span class="blob-btn__inner">
-      <span class="blob-btn__blobs">
-        <span class="blob-btn__blob"></span>
-        <span class="blob-btn__blob"></span>
-        <span class="blob-btn__blob"></span>
-        <span class="blob-btn__blob"></span>
+    <button class="blob-btn">
+      Invite friend
+      <span class="blob-btn__inner">
+        <span class="blob-btn__blobs">
+          <span class="blob-btn__blob"></span>
+          <span class="blob-btn__blob"></span>
+          <span class="blob-btn__blob"></span>
+          <span class="blob-btn__blob"></span>
+        </span>
       </span>
-    </span>
-  </button>
-  <br />
-</div>
-
-<div class="choice">
-  <div
-    [ngClass]="{
-      activeFraction: gameControlService.selectedFraction === Fraction.SWAMP
-    }"
-    (click)="gameControlService.handleFractionChoice(Fraction.SWAMP)"
-    class="fractionCard"
-  >
-    Swamp
-    <img
-      class="fractionImg"
-      src="../../../../assets/Photoes/FractionImg/swamp.png"
-      alt="Swamp"
-    />
+    </button>
+    <br />
   </div>
 
-  <div
-    [ngClass]="{
-      activeFraction: gameControlService.selectedFraction === Fraction.MOUNTAIN
-    }"
-    (click)="gameControlService.handleFractionChoice(Fraction.MOUNTAIN)"
-    class="fractionCard"
-  >
-    Mountain
-    <img
-      class="fractionImg"
-      src="../../../../assets/Photoes/FractionImg/mountain.png"
-      alt="mountain"
-    />
+  <div class="choice">
+    <div
+      [ngClass]="{
+        activeFraction: gameControlService.selectedFraction === Fraction.SWAMP
+      }"
+      (click)="gameControlService.handleFractionChoice(Fraction.SWAMP)"
+      class="fractionCard"
+    >
+      Swamp
+      <img
+        class="fractionImg"
+        src="../../../../assets/Photoes/FractionImg/swamp.png"
+        alt="Swamp"
+      />
+    </div>
+
+    <div
+      [ngClass]="{
+        activeFraction:
+          gameControlService.selectedFraction === Fraction.MOUNTAIN
+      }"
+      (click)="gameControlService.handleFractionChoice(Fraction.MOUNTAIN)"
+      class="fractionCard"
+    >
+      Mountain
+      <img
+        class="fractionImg"
+        src="../../../../assets/Photoes/FractionImg/mountain.png"
+        alt="mountain"
+      />
+    </div>
   </div>
 </div>
