--- a/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
+++ b/angular/first-angular/src/app/content/game-page/data-field/data-field.component.scss
@@ -1,3 +1,9 @@
+.background {
+  background-color: bisque;
+  width: 100%;
+  height: calc(100% - 64px);
+}
+
 .container {
   display: flex;
   width: 100%;
@@ -24,6 +30,7 @@
 }
 
 .fraction-name {
+  caret-color: transparent;
   font-family: Josefin Sans;
   font-size: 3rem;
 }
@@ -145,9 +152,10 @@ $turn-time: 6s;
   }
 }
 
-.count-of-smth {
+.countOfSmth {
   font-family: serif, Monotype Corsiva;
   font-size: 3rem;
+  caret-color: transparent;
 }
 
 .fa {
@@ -159,6 +167,7 @@ $turn-time: 6s;
   position: relative;
   display: inline-block;
   text-align: center;
+  caret-color: transparent;
   height: 50px;
   width: 260px;
   line-height: 50px;
@@ -201,6 +210,7 @@ $turn-time: 6s;
 
 .btn-slide span.title {
   font-family: "Nunito Sans";
+  caret-color: transparent;
   position: absolute;
   left: 85px;
   font-size: 20px;
@@ -234,12 +244,49 @@ $turn-time: 6s;
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.decks {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  width: 30vh;
+  height: 100%;
+  margin: 2rem;
+}
+
+.opponentsDecks {
+  align-self: flex-start;
+}
+
+.opponentsDeck {
+  background-color: purple;
+}
+
+.myDecks {
+  align-self: flex-end;
+}
+
+.myDeck {
+  background-color: green;
+}
+
+.deck {
+  border: 1px solid black;
+  height: 20vh;
+  width: 40%;
+}
+
+.field {
   display: grid;
   height: calc(100vh - 80px - 6rem);
+  width: 48%;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(6, 1fr);
-  padding-left: 10rem;
-  padding-right: 10rem;
   margin-top: 3rem;
   padding-bottom: 3rem;
   gap: 0.3rem;
@@ -260,15 +307,15 @@ $turn-time: 6s;
 
 .endTurnButtonField {
   position: absolute;
-  right: 1.8rem;
+  right: 1.2rem;
   top: 6rem;
 }
 
 .endTurnButton {
-  font-size: 18px;
+  font-size: 14px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   height: 3rem;
-  width: auto;
+  width: 8rem;
   background: linear-gradient(to bottom right, blue, pink);
   &:focus {
     animation: effect 0.4s 1;
