--- a/angular/first-angular/src/app/content/game-page/game-over/game-over.component.scss
+++ b/angular/first-angular/src/app/content/game-page/game-over/game-over.component.scss
@@ -1,7 +1,11 @@
+.background {
+  background-color: bisque;
+  width: 100%;
+}
+
 .container {
   width: 100%;
   height: 100%;
-  background-color: bisque;
   display: flex;
   justify-content: center;
 }
