drag and drop and ngfor for field elements (rebuild)

--- a/angular/first-angular/src/app/app.component.html
+++ b/angular/first-angular/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="gameControlService.gameState === 0">
+<ng-container *ngIf="gameControlService.gameState === 0">
   <app-toolbar></app-toolbar>
-</div>
+</ng-container>
 <app-content></app-content>
