--- a/angular/first-angular/src/app/content/game-page/game-over/game-over.component.html
+++ b/angular/first-angular/src/app/content/game-page/game-over/game-over.component.html
@@ -1,5 +1,9 @@
-<div class="background">
-  <div class="container">
+<div class="statistics">
+  <div class="header">
+    <div><strong>Статистика </strong></div>
+  </div>
+
+  <div class="closeButton">
     <div class="cl-btn-6">
       <div class="cl-btn-6-in">
         <div
@@ -12,4 +16,10 @@
       </div>
     </div>
   </div>
+  <ul class="list">
+    <li class="elementOfList">Итог игры</li>
+    <li class="elementOfList">Выбор фракции</li>
+    <li class="elementOfList">Продолжительность игры</li>
+    <li class="elementOfList">Количество потраченных денег</li>
+  </ul>
 </div>
