--- a/angular/first-angular/src/app/content/game-page/game-over/game-over.component.scss
+++ b/angular/first-angular/src/app/content/game-page/game-over/game-over.component.scss
@@ -1,18 +1,45 @@
-.background {
-  background-color: bisque;
-  width: 100%;
-}
-
 .container {
-  width: 100%;
+  position: absolute;
+  top: 5px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 50%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+}
+
+.statistics {
+  position: relative;
+  top: 6rem;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+  height: 60%;
+  border: 3px solid black;
+}
+
+.header {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 3px dotted black;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  font-size: 22px;
+}
+
+.closeButton {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .cl-btn-6 {
   position: relative;
-  width: 70px;
+  right: 15px;
+  top: -10px;
+  width: 2rem;
   cursor: pointer;
 }
 .cl-btn-6-in {
@@ -54,4 +81,15 @@
 .cl-btn-6:hover .cl-btn-6-in:before,
 .cl-btn-6:hover .cl-btn-6-in:after {
   transform: rotate(0);
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 40px);
+}
+
+.elementOfList {
+  align-content: center;
+  flex-grow: 1;
 }
