--- a/angular/first-angular/src/app/content/game-page/preparing/preparing.component.html
+++ b/angular/first-angular/src/app/content/game-page/preparing/preparing.component.html
@@ -1,6 +1,23 @@
 <div class="background">
   <div class="buttons">
+    <div class="loadCircle" id="loadCircle">
+      <img
+        class="loadImg"
+        src="../../../../assets/Photoes/loadArrow.png"
+        alt="arrow"
+      />
+    </div>
     <button
+      (click)="changeColor()"
+      (click)="gameControlService.changeSecondPlayerState()"
+      class="exampleButton"
+      id="exampleButton"
+    >
+      {{ opponentsState }}
+    </button>
+
+    <button
+      (click)="handleLoadCircle()"
       (click)="gameControlService.handleGameStarted()"
       (click)="gameControlService.handleChangeContent(GamePhases.START_GAME)"
       class="blob-btn"
@@ -15,7 +32,6 @@
         </span>
       </span>
     </button>
-    <br />
 
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
       <defs>
@@ -47,7 +63,6 @@
         </span>
       </span>
     </button>
-    <br />
   </div>
 
   <div class="choice">
