--- a/angular/first-angular/src/app/content/game-page/preparing/preparing.component.scss
+++ b/angular/first-angular/src/app/content/game-page/preparing/preparing.component.scss
@@ -171,3 +171,58 @@ $borderW: 2px;
 .activeFraction {
   background-color: white;
 }
+
+.exampleButton {
+  position: fixed;
+  left: 3rem;
+  top: 5rem;
+  background-color: red;
+  border-radius: 5px;
+  height: 60px;
+  width: 100px;
+  &:hover {
+    font-size: 18px;
+    height: 70px;
+    width: 120px;
+  }
+}
+
+.loadCircle {
+  display: none;
+  position: absolute;
+  animation: spinning 3s infinite linear;
+}
+.loadImg {
+  height: 80px;
+  width: 80px;
+}
+
+@keyframes spinning {
+  0% {
+    transform: rotate(0);
+  }
+  13% {
+    transform: rotate(45deg);
+  }
+  25% {
+    transform: rotate(90deg);
+  }
+  38% {
+    transform: rotate(135deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  63% {
+    transform: rotate(225deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  88% {
+    transform: rotate(315deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
